
syntax = "proto3";


option csharp_namespace = "acmeat.server.local.client";

package local;

service GrpcLocal {
  rpc GetLocalById(Id)returns(Local);
  rpc GetLocalByUrl(Url)returns(Local);
  rpc GetLocals(Id) returns (LocalList);
  rpc GetLocalsByCity(City) returns (LocalList);
  rpc CreateLocal(Local) returns(GeneralResponse);
  rpc UpdateLocal(Local) returns (GeneralResponse);
  rpc DeleteLocal(Local) returns (GeneralResponse);
  rpc DeleteLocalById(Local) returns (GeneralResponse);
}


message Id{
  int32 id = 1;
}

message Url{
  string url =1;
}

message City{
  string city = 1;
}

message GeneralResponse{
  string message=1;
}

message Local{
  int32 Id=1 ;

  string Name=2 ;

  string OpeningTime=3 ;

  string ClosingTime=4 ;

  string Address=5 ;

  string OpeningDays=6 ;
  bool Available=7 ;
  string Url=8;
}

message LocalList {
  repeated Local locals=1;
}